# PC_HWC_2

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
dependencies/hwc1/: CMakeLists.txt
dependencies/hwc1/src/: sem.h
dependencies/hwc1/src/buffer_t/: buffer_t.h
dependencies/hwc1/src/client_udp/: client_udp.c
dependencies/hwc1/src/msg_t/: msg_t.c
dependencies/hwc1/src/mx_node/: mx_node.c  mx_node.h
dependencies/hwc1/src/mx_queue/: mx_queue.h
dependencies/hwc1/src/server_udp/: server_udp.c
dependencies/hwc1/test/all_tests/: all_tests.c
dependencies/hwc1/test/utilities/ConsumatoreBloccanteDiUnMessaggio/: ConsumatoreBloccanteDiUnMessaggio.c
dependencies/hwc1/test/utilities/Factory/: Factory.h
dependencies/hwc1/test/utilities/ProduttoreBloccanteDiUnMessaggio/: ProduttoreBloccanteDiUnMessaggio.c
dependencies/hwc2_list/: CMakeLists.txt  list.c
dependencies/hwc2_list/test/: testList.c
src/: CMakeLists.txt  TestDriver.c  main.c
src/Accepter/: Accepter.c  Accepter.h
src/Dispatcher/: Dispatcher.c  Dispatcher.h
src/Factory/: Factory.c  Factory.h
src/Provider/: Provider.c  Provider.h
src/Reader/: Reader.c  Reader.h
src/dependencies/hwc1/src/: sem.h
src/dependencies/hwc1/src/buffer_t/: buffer_t.c  buffer_t.h
src/dependencies/hwc1/src/client_udp/: client_udp.h
src/dependencies/hwc1/src/msg_t/: msg_t.h
src/dependencies/hwc1/src/mx_node/: mx_node.c  mx_node.h
src/dependencies/hwc1/src/mx_queue/: mx_queue.c  mx_queue.h
src/dependencies/hwc1/src/server_udp/: server_udp.h
src/dependencies/hwc1/test/: CMakeLists.txt  test.c
src/dependencies/hwc1/test/all_tests/: all_tests.h
src/dependencies/hwc1/test/utilities/ConsumatoreBloccanteDiUnMessaggio/: ConsumatoreBloccanteDiUnMessaggio.h
src/dependencies/hwc1/test/utilities/Factory/: Factory.c
src/dependencies/hwc1/test/utilities/ProduttoreBloccanteDiUnMessaggio/: ProduttoreBloccanteDiUnMessaggio.h
src/dependencies/hwc2_list/: CMakeLists.txt  TestDriver.c  list.h
src/dependencies/hwc2_list/test/: listDomainAssertion.c  listDomainAssertion.h  testList.c
src/mocks/DispatcherMock/: DispatcherMock.c  DispatcherMock.h
src/poison_pill/: poison_pill.c  poison_pill.h
src/tests/: all_tests.c  all_tests.h  suite_accepter.c  suite_accepter.h  suite_dispatcher.c  suite_dispatcher.h  suite_provider.c  suite_provider.h  suite_reader.c  suite_reader.h
src/tests/Factory/: Factory.c  Factory.h
src/tests/mocks/AccepterMock/: AccepterMock.h
src/tests/mocks/DispatcherMock/: DispatcherMock.c  DispatcherMock.h
src/tests/mocks/ReaderMock/: ReaderMock.h
test/: TestDriver.c
test/all_tests/: all_tests.c  all_tests.h
